--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+#server-dependencies
 /server/node_modules
-/client/node_modules
-/.pnp
 /server/radata
 /server/config/auth-keys.js
+
+#client-dependencies
+/client/node_modules
+/.pnp
 .pnp.js
+
 
 # testing
 /coverage
