--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "express": "^4.17.1",
     "gun": "^0.2020.1234",
