--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,16 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
+#server-dependencies
+/server/node_modules
+/server/radata
+/server/config/auth-keys.js
+/server/.env
+
+#client-dependencies
+/client/node_modules
 /.pnp
 .pnp.js
+
 
 # testing
 /coverage
