--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -15,9 +15,17 @@
 		"no-useless-escape": "off",
 		"node/shebang": "off",
 		"comma-dangle": "off",
+		"object-curly-newline": "off",
 		"node/no-unsupported-features/es-syntax": "off",
 		"no-process-exit": "off",
 		"react/jsx-indent": "off",
-		"react/react-in-jsx-scope": "off"
+		"react/react-in-jsx-scope": "off",
+		"react/jsx-indent-props": "off",
+		"react/no-array-index-key": "warn",
+		"react/prop-types": "off",
+		"jsx-a11y/no-static-element-interactions": "off",
+		"jsx-a11y/click-events-have-key-events": "off",
+		"jsx-a11y/no-noninteractive-element-interactions": "off",
+		"jsx-a11y/anchor-is-valid": "off"
 	}
 }
