--- a/server/package.json
+++ b/server/package.json
@@ -7,12 +7,15 @@
     "express": "^4.17.1",
     "gun": "^0.2020.1234",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.12",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.12",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-linkedin-oauth2": "^2.0.0",
     "passport-local": "^1.0.0",
+    "referral-code-generator": "^1.0.8",
     "validator": "^13.6.0"
   },
   "name": "verat",
